# demo-atsame70-xpld

./: .drone.yml  .gdbinit  .lager  README.md
.github/workflows/: build_and_test.yml
_build/: .ninja_deps  .ninja_log  build.ninja  rules.ninja
_build/app/: app  app.hex
_build/unit-tests/test-suites/test-example/: test-example  test-example.hex
_build/unit-tests/test-suites/test-ledctrl/: test-ledctrl  test-ledctrl.hex
app/: CMakeLists.txt  main.c
modules/: CMakeLists.txt  ledctrl.c  ledctrl.h  ticks.c
system-tests/: test.py
unit-tests/: same70_target_uart.c  same70_target_uart.h
unit-tests/test-suites/test-example/: CMakeLists.txt  main_example.c  test1.c
unit-tests/test-suites/test-ledctrl/: CMakeLists.txt  main_ledctrl.c  test_ledctrl.c
